syntax = "proto3";

package chat_auth_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/ViciousKit/course-chat-auth/generated/chat_auth_v1;chat_auth_v1";

service chatServerV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Update(UpdateRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}


enum UserRole {
    USER = 0;
    ADMIN = 1;
}

message CreateRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    UserRole role = 5;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
    UserRole role = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
    int64 id  = 1;
    string name = 2;
    string email = 3;
    UserRole role = 4;
}

message DeleteRequest {
    int64 id = 1;
}